cancel REST anfrage hinzugefügt
